[build-system]
requires = ["setuptools>=69", "wheel", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "asun"
version = "1.0.0"
description = "High-performance ASUN (Array-Schema Unified Notation) Python extension."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "asun contributors" }]
keywords = ["asun", "serialization", "schema", "llm", "data-format"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/asun-lab/asun-py"
Repository = "https://github.com/asun-lab/asun-py"
Issues = "https://github.com/asun-lab/asun-py/issues"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_*"
test-requires = ["pytest"]
test-command = "pytest {project}/tests -v"
